# anyrun-shell-shortcuts

./: Cargo.toml  README.md  flake.nix
src/: lib.rs
