[package]
name = "anyrun-shell-shortcuts"
version = "0.1.0"
edition = "2021"
description = "Anyrun plugin to add Shortcuts for running Shell Commands"
homepage = "https://github.com/micha4w/anyrun-shell-shortcuts"
author = ["micha4w"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
anyrun-plugin = "0.1.0"
fuzzy-matcher = "0.3.7"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
